fix(ui): improve spacing of app status panel

--- a/ui/src/app/applications/components/application-status-panel/application-status-panel.scss
+++ b/ui/src/app/applications/components/application-status-panel/application-status-panel.scss
@@ -4,13 +4,34 @@
     color: $argo-color-gray-4;
 }
 
+@mixin responsive-widths {
+    @media screen and (min-width: map-get($breakpoints, large)) {
+        max-width: 250px;
+    }
+    @media screen and (min-width: map-get($breakpoints, xlarge)) {
+        min-width: 250px;
+        max-width: 300px;
+    }
+    @media screen and (min-width: map-get($breakpoints, xxlarge)) {
+        min-width: 325px;
+        max-width: 350px;
+    }
+    @media screen and (min-width: map-get($breakpoints, xxxlarge)) {
+        min-width: 375px;
+        max-width: 450px;
+    }
+}
+
 .application-status-panel {
     font-size: 0.875em;
     color: $argo-color-gray-7;
     background-color: white;
     box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.1);
     flex-wrap: nowrap;
+    flex-shrink: 1;
     overflow-x: auto;
+
+    $row-width: 250px;
 
     &__conditions {
         display: flex;
@@ -46,7 +67,7 @@
 
         &__row {
             display: flex;
-            max-width: 300px;
+            max-width: $row-width;
             flex-shrink: 1;
             div:first-child {
                 margin-right: 10px;
@@ -58,6 +79,8 @@
                 overflow: hidden;
                 text-overflow: ellipsis;
             }
+
+            @include responsive-widths();
         }
 
         &:not(:first-child) {
@@ -137,17 +160,20 @@
 
     &__item-name {
         margin: auto 0;
-        max-width: 300px;
+        max-width: $row-width;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
         i {
             position: relative;
             top: -2px;
         }
+        @include responsive-widths();
     }
     &__item-name,
     &__item-value {
         margin-top: auto;
         overflow: hidden;
         text-overflow: ellipsis;
-        white-space: nowrap;
     }
 }
